@@ -1,0 +1,3 @@
+#define WIN32_LEAN_AND_MEAN    /* Exclude rarely-used stuff from Windows headers */
+#include <windows.h>
+#include "taskmgr.h"
